--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,11 @@ vapid.subject=mailto:vesa.nieminen@gmail.com
 vapid.private.key=${VAPID_PRIVATE_KEY}
 spring.sql.init.mode=always
 # override these in deployment
-spring.datasource.url=jdbc:postgresql://localhost:5456/postgres
-spring.datasource.username=postgres
-spring.datasource.password=mysecretpassword
+# Database connection settings
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 vaadin.frontend.hotdeploy=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=50MB
